 - Fixed carrier engineering blueprint
 - Fixed missing technologies for Netherlands and Ukraine
 - Karabakh now should have Non State Actor idea instead of Aspiring State
 - Fixed research slots not correctly costing anything
 - Fixed Ukraine leaving its own Baltic Black Sea faction
 - Fixed bad calls in the Harsh Path of the Culture conflict for Spain

Focus Trees:
 - Added more wargoals to give accurate Spanish Empire Borders
 - Improved some availables in the Spanish Monarchist tree

Localisation:
 - Spanish localization improvements for the tree
 - Fixed spelling/grammar for USA, Azerbaijan and Italy focus tree
 - Fixed localisation for event Quebec Supports the Government
 - Fixed localisation for Battleship technology
 - Fixed missing title for module category about engines in naval designer

Quality of Life (QoL):
 - Explained how the education cost from research slots is calculated and added a utility script into the decision so you can see exactly how much it will increase cost by one slot.

v1.7 - Make Millennium Dawn Great Again

AI:
 - Improved Generic Tree AI
 - Economic AI should now evaluate taxes and raise and lower as needed
 - AI will produce better units
 - AI will now invest in infrastructure
 - AI will invest until 6% interest rate and then stop to focus on debt maintenance
 - AI will now produce equipment more effectively to provide a more robust AI
 - AI in Africa and Western ENG should no longer support the Nigerian Caliphate
 - Nigeria has a couple additional AI strategies to be more dominant in the ECOWAS region
 - Nigeria's AI should be a bit more dynamic now
 - AI should be more aggressive at paying down debt
 - Russia should have better war declaration AI

Balance:
 - Econ Cycle Upgrade is now 7.50% of your current GDP
 - Healthcare/Social Spending are now more expensive for lower GDP/C nations
 - Rebalanced Cost and gain from certain Afghan focuses
 - Rebalanced Afghanistan Tribal Culture to not be too punishing now that other PP