@@ -105,6 +105,7 @@ set_research_slots = 2
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 32 }
 	add_to_array = { influence_array = PER.id }
 	add_to_array = { influence_array_val = 20 }
 	add_to_array = { influence_array = SOV.id }
