@@ -48,9 +48,9 @@
 	}
 
 	init_influence = yes
-	set_variable = { domestic_influence_amount = 30 }
+	set_variable = { domestic_influence_amount = 55 }
 	add_to_array = { influence_array = SAF.id }
-	add_to_array = { influence_array_val = 130 }
+	add_to_array = { influence_array_val = 45 }
 	startup_influence = yes
 
 	set_variable = { farmers_opinion = 40 }
