@@ -48,9 +48,9 @@
 
 	#Influence system
 	init_influence = yes
-	set_variable = { domestic_influence_amount = 20 }
+	set_variable = { domestic_influence_amount = 40 }
 	add_to_array = { influence_array = TUR.id }
-	add_to_array = { influence_array_val = 150 }
+	add_to_array = { influence_array_val = 60 }
 	startup_influence = yes
 
 
