@@ -245,6 +245,7 @@ set_research_slots = 4
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 55.8 }
 	add_to_array = { influence_array = CHI.id }
 	add_to_array = { influence_array_val = 35.5 }
 	add_to_array = { influence_array = SOV.id }
