@@ -28,6 +28,7 @@
 
 	#Influence syste
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 94.25 }
 	add_to_array = { influence_array = SOM.id }
 	add_to_array = { influence_array_val = 5.75 }
 	startup_influence = yes
