@@ -35,6 +35,7 @@
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 16.20 }
 	add_to_array = { influence_array = RWA.id }
 	add_to_array = { influence_array_val = 80 }
 	add_to_array = { influence_array = UGA.id }
