@@ -43,6 +43,7 @@
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 14.8 }
 	add_to_array = { influence_array = ETH.id }
 	add_to_array = { influence_array_val = 18.1 }
 	add_to_array = { influence_array = UGA.id }
