@@ -65,6 +65,7 @@
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 18.61 }
 	add_to_array = { influence_array = USA.id }
 	add_to_array = { influence_array_val = 38.8 }
 	add_to_array = { influence_array = ENG.id }
