@@ -48,6 +48,7 @@
 	}
 
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 15.75 }
 	add_to_array = { influence_array = USA.id }
 	add_to_array = { influence_array_val = 35.4 }
 	add_to_array = { influence_array = TAI.id }
