@@ -118,6 +118,7 @@
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 72.83 }
 	add_to_array = { influence_array = SOV.id }
 	add_to_array = { influence_array_val = 15 }
 	add_to_array = { influence_array = CHI.id }
