@@ -43,6 +43,7 @@ set_research_slots = 2
 
 	#Influence system
 	init_influence = yes
+	set_variable = { domestic_influence_amount = 63.4 }
 	add_to_array = { influence_array = SOV.id }
 	add_to_array = { influence_array_val = 21.5 }
 	add_to_array = { influence_array = CHI.id }
