@@ -324,15 +324,15 @@ l_english:
  SPR_spain_anew: "Spain Anew"
  SPR_spain_anew_desc: "Spain Anew #TODO: FOCUS - Replace with a DESC"
  SPR_a_softer_stance: "A Softer Stance"
- SPR_a_softer_stance_desc: "A Softer Stance #TODO: FOCUS - Replace with a DESC"
+ SPR_a_softer_stance_desc: "Ensuring we take a softer stance against the separatists can see some reconcilication between us and our neighbors."
  SPR_negotiate_with_the_parties: "Negotiate With The Parties"
- SPR_negotiate_with_the_parties_desc: "Negotiate With The Parties #TODO: FOCUS - Replace with a DESC"
+ SPR_negotiate_with_the_parties_desc: "Negotiating with the various separatist parties can help breed a small sembalance of stability into our fragile state. Aggrvating the cultures of our nation will do nothing but bring us harm."
  SPR_catalonian_concessions: "Catalonian Concessions"
- SPR_catalonian_concessions_desc: "Catalonian Concessions #TODO: FOCUS - Replace with a DESC"
+ SPR_catalonian_concessions_desc: "Concedeing to Catalans in some manner should keep them sastified for now..."
  SPR_one_with_the_basque: "One With The Basque"
- SPR_one_with_the_basque_desc: "One With The Basque #TODO: FOCUS - Replace with a DESC"
+ SPR_one_with_the_basque_desc: "Although we have had a past of being against the wanton terrorism from the ETA... It is important to recongize them as Spanish nonetheless."
  SPR_unionization_of_faith: "Unionization Of Faith"
- SPR_unionization_of_faith_desc: "Unionization Of Faith #TODO: FOCUS - Replace with a DESC"
+ SPR_unionization_of_faith_desc: "The Labour Unions of Spain should advocate for Catholicism. God gave humanity the right to unionize."
  SPR_reinforce_the_castle_doctrine: "Reinforce The Castle Doctrine"
  SPR_reinforce_the_castle_doctrine_desc: "Reinforce The Castle Doctrine #TODO: FOCUS - Replace with a DESC"
  SPR_funding_for_police: "Funding For Police"
