@@ -34,6 +34,7 @@ Bugfixes:
  - Fixed research slots not correctly costing anything
  - Fixed Ukraine leaving its own Baltic Black Sea faction
  - Fixed bad calls in the Harsh Path of the Culture conflict for Spain
+ - Fixed all of the influence starting values so China can't instantly puppet Korea
 
 Focus Trees:
  - Added more wargoals to give accurate Spanish Empire Borders
